// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo /> Should render correctly 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 fBmToK"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 gfWJqm"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 jmxYGd"
      >
        G
      </span>
    </a>
  </div>
</div>
`;

exports[`<Logo /> Should render correctly animated 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 fBmToK"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 gfWJqm"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 jmxYGd"
      >
        G
      </span>
    </a>
  </div>
</div>
`;

exports[`<Logo /> Should render correctly pride 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 fBmToK"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 gfWJqm"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 fAwzxY"
      >
        G
      </span>
    </a>
  </div>
</div>
`;

exports[`<Logo /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 fBmToK test-custom-classname"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 gfWJqm"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 jmxYGd"
      >
        G
      </span>
    </a>
  </div>
</div>
`;
